# src/main/java/com/bank/account/controller/AccountController.java
@@ -3,6 +3,7 @@ package com.bank.account.controller;
 import com.bank.account.api.dto.AccountDepositRequest;
 import com.bank.account.api.dto.AccountRequest;
 import com.bank.account.api.dto.AccountResponse;
+import com.bank.account.api.dto.AccountWithdrawalRequest;
 import com.bank.account.api.generated.AccountsApi;
 import com.bank.account.service.AccountService;
 import jakarta.validation.Valid;
@@ -128,6 +129,21 @@ public class AccountController implements AccountsApi {
                 .flatMap(request ->
                         Mono.fromCompletionStage(
                                 accountService.deposit(id, request).toCompletionStage()
+                        )
+                )
+                .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<AccountResponse>> withdrawAccount(
+            String id,
+            Mono<AccountWithdrawalRequest> accountWithdrawalRequest,
+            ServerWebExchange exchange) {
+
+        return accountWithdrawalRequest
+                .flatMap(request ->
+                        Mono.fromCompletionStage(
+                                accountService.withdraw(id, request).toCompletionStage()
                         )
                 )
                 .map(ResponseEntity::ok);
